# AirOs

./: README.md  pyproject.toml  verify_script.py
agentcircuit/: __init__.py  budget.py  errors.py  fuse.py  medic.py  pricing.py  providers.py  rca.py  sentinel.py  storage.py  strategies.py
agentcircuit/adapters/: __init__.py  autogen.py  base.py  crewai.py  langchain.py  langgraph.py
airos/: __init__.py  budget.py  core.py  errors.py  pricing.py  storage.py
airos/adapters/: crewai.py  langgraph.py
dashboard/: api_server.py
dashboard/app/: page.tsx
dashboard/components/: MedicInsightDrawer.tsx  Pulse.tsx  ReliabilityGraph.tsx  SavingsCard.tsx  SettingsPopover.tsx  Stats.tsx
dashboard/components/ui/: Drawer.tsx
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_reliable_node.py
tests/unit/: __init__.py  test_budget.py  test_fuse.py  test_medic.py  test_pricing.py  test_sentinel.py  test_storage.py
