[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airos-sdk"
version = "0.4.1"
description = "One decorator to make any AI agent reliable. Loop detection, auto-repair, output validation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Simranjeet Singh", email = "simranmultani197@gmail.com"}]
keywords = ["ai", "agents", "reliability", "llm", "langchain", "crewai", "autogen", "langgraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# MINIMAL core dependencies - zero friction install
dependencies = [
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/simranmultani197/AirOs"
Documentation = "https://github.com/simranmultani197/AirOs#readme"
Repository = "https://github.com/simranmultani197/AirOs"
Issues = "https://github.com/simranmultani197/AirOs/issues"

[project.optional-dependencies]
# LLM providers for auto-repair (pick what you use)
groq = ["groq"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
ollama = ["httpx>=0.25.0"]

# All LLM providers
llm = [
    "groq",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "httpx>=0.25.0",
    "python-dotenv",
    "tenacity>=8.2.0",
    "tiktoken>=0.5.0",
]

# Framework adapters
langchain = ["langchain>=0.1.0", "langchain-core>=0.1.0"]
crewai = ["crewai>=0.1.0"]
langgraph = ["langgraph"]

# Storage backends
postgres = ["psycopg2-binary>=2.9.0"]

# Development
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

# Everything
all = [
    "airos-sdk[llm,langchain,crewai,langgraph,postgres,dev]",
]

[tool.setuptools.packages.find]
include = ["airos*"]
exclude = ["tests*", "dashboard*", "docs*", "assets*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["airos"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
